New participant apis, refactoring
